// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds archer great items can destroy 28's 1`] = `
{
  "constitution": 5005,
  "dexterity": 477926,
  "intelligence": 5005,
  "luck": 12005,
  "strength": 5005,
  "willpower": 5005,
  "wisdom": 5005,
}
`;

exports[`builds archer normal items can kill level 5 mobs 1`] = `
{
  "constitution": 8,
  "dexterity": 348,
  "intelligence": 8,
  "luck": 13,
  "strength": 8,
  "willpower": 8,
  "wisdom": 8,
}
`;

exports[`builds archer trash items can kill level 1 mobs 1`] = `
{
  "constitution": 5,
  "dexterity": 10,
  "intelligence": 5,
  "luck": 5,
  "strength": 5,
  "willpower": 5,
  "wisdom": 5,
}
`;

exports[`builds archer uber items can deal destroy 32s at max level 1`] = `
{
  "constitution": 8458,
  "dexterity": 642835,
  "intelligence": 8458,
  "luck": 20288,
  "strength": 8458,
  "willpower": 32494,
  "wisdom": 32494,
}
`;

exports[`builds melee great items can destroy 28's 1`] = `
{
  "constitution": 5005,
  "dexterity": 66426,
  "intelligence": 5005,
  "luck": 8505,
  "strength": 128549,
  "willpower": 6006,
  "wisdom": 5005,
}
`;

exports[`builds melee normal items can kill level 5 mobs 1`] = `
{
  "constitution": 8,
  "dexterity": 60,
  "intelligence": 8,
  "luck": 11,
  "strength": 99,
  "willpower": 10,
  "wisdom": 8,
}
`;

exports[`builds melee trash items can kill level 1 mobs 1`] = `
{
  "constitution": 5,
  "dexterity": 7,
  "intelligence": 5,
  "luck": 5,
  "strength": 8,
  "willpower": 6,
  "wisdom": 5,
}
`;

exports[`builds melee uber items can deal destroy 32s at max level 1`] = `
{
  "constitution": 10996,
  "dexterity": 182274,
  "intelligence": 10996,
  "luck": 18685,
  "strength": 1028394,
  "willpower": 13195,
  "wisdom": 10996,
}
`;
